--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   flutter_colorpicker: ^1.0.3 # xử lý hex color
 
   # Các tiện ích khác
-  intl: ^0.18.0  # Để format ngày tháng
+  intl: ^0.20.2   # Để format ngày tháng (0.20.2 released on 24/1/2025)
   shared_preferences: ^2.2.0 # Để lưu cài đặt Sáng/Tối (dùng sau)
   path_provider: ^2.0.15 # Tìm thư mục lưu file tạm
-  share_plus: ^7.2.0 # Tính năng chia sẻ file (Export)
-  file_picker: ^6.1.1 # Chọn file từ máy (Import)
+  share_plus: ^12.0.1 # Tính năng chia sẻ file (Export) (12.0.1 released on 20/10/2025)
+  file_picker: ^10.3.8 # Chọn file từ máy (Import) (10.3.8 released on 18/12/2025)
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
