--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 
   flutter_local_notifications: ^19.5.0 # thông báo đẩy, dùng local (17/10/2025)
   timezone: ^0.10.1 # support local notifi, dùng để thông báo đúng múi giờ (0.10.1 released on 28/4/2025)
+  flutter_timezone: ^5.0.1 # (29/10/2025)
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
