--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,3 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
+distributionUrl=https\://services.gradle.org/distributions/gradle-9.4.0-milestone-4-all.zip
