--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   timezone: ^0.10.1 # support local notifi, dùng để thông báo đúng múi giờ (0.10.1 released on 28/4/2025)
   flutter_timezone: ^5.0.1 # (29/10/2025)
 
+  firebase_core: ^4.3.0
+  firebase_messaging: ^16.1.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
